# nvbitfi

./: run_injections.sh  run_multiple_flags.py  run_rad_fault_injection.sh  test.sh
common/: arch.h  globals.h
injector/: Makefile  flex_grip_error_model.h  inject_funcs.cu  injector.cu  injector.h
logs/gaussian/: nvbitfi-igprofile.txt
pf_injector/: .gitignore  CMakeLists.txt  Makefile  example.yaml  fmxm.yaml  generate_fault_list_pf.py  inject_funcs.cu  lenet.yaml  nvbitfi-injection-info.txt  parse_injection_files.py  permanent_fault_injector.py  pf_injector.cu  pf_injector.h
profiler/: Makefile
scripts/: fast_parameters.py  params.py  run_injections.py
test-apps/accl/: Makefile  run.sh
test-apps/bfs/: Makefile  run.sh
test-apps/cfd/: Makefile  run.sh
test-apps/darknet_lenet/: Makefile  predict.sh  run.sh
test-apps/darknet_rubens/: Makefile
test-apps/darknet_v2/: Makefile  run.sh
test-apps/darknet_v3/: Makefile  run_double.sh
test-apps/gaussian/: Makefile  run.sh
test-apps/gemm/: Makefile  run.sh  run_cublas_double.sh  run_cublas_float.sh  run_mxm_float.sh  sdc_check.sh
test-apps/gemm_tensorcores/: Makefile  run.sh  run_cublas_double.sh  run_cublas_half.sh  run_mxm_float.sh  size_table.txt
test-apps/hotspot/: Makefile  cuda_hotspot.cu  run.sh
test-apps/lava_mp/: Makefile  run.sh  sdc_check.sh
test-apps/lud/: Makefile  run.sh
test-apps/mergesort/: Makefile  run.sh
test-apps/nw/: Makefile  run.sh
test-apps/quicksort/: Makefile  run.sh
test-apps/simple_add/: Makefile
test-apps/trip_hotspot/: Makefile  run.sh  run_double.sh
(+18 files in other folders)
